maze.wallfollower.WallFollowerMaze.scala.error
Erreur de compilation :
WallFollowerMaze:7: error: illegal start of simple expression
    else
    ^