maze.wallfollower.WallFollowerMaze.scala.code
override def run() {
  while(!estSurBiscuit()) {
		droite()
    if(estFaceMur())
    	gauche()
    	if(!estFaceMur())
    else
    	avance()
  }
  prendBiscuit()
}